# waf-detector

./: ADVANCED_WAF_TODO.md  Cargo.toml  DEVELOPMENT.md  MANUAL_UI_TESTING.md  README.md  SERVER_TROUBLESHOOTING.md  WEB_INTERFACE_GUIDE.md  adobe_urls.txt  api_cloudflare.json  api_frame.json  cli_frame.txt  debug.html  debug_server.sh  detection_techniques_todo.md  quick_ui_test.py  scan_api_output.json  smoke-test-fix.html  smoke-test-fix.js  start_server.sh  test_integration.rs  test_payload_integration.py  test_results.txt  test_web_server.py
benches/: detection_benchmarks.rs
examples/: diagnose_frame_io.rs
pattern_analysis/: CloudFlare_cloudflare_com.txt  CloudFlare_discord_com.txt  pattern_summary.md
scripts/: pattern_discovery.sh  waf-smoke-test.sh
src/: lib.rs  main.rs  onboarding_test.rs  script_executor.rs
src/cli/: commands.rs  mod.rs  output.rs
src/confidence/: advanced_scoring.rs  mod.rs
src/dns/: mod.rs
src/engine/: mod.rs  waf_mode_detector.rs
src/http/: mod.rs
src/payload/: mod.rs  waf_smoke_test.rs
src/providers/: akamai.rs  aws.rs  cloudflare.rs  fastly.rs  mod.rs  signature_based.rs  vercel.rs  waf_detection.rs
src/registry/: mod.rs
src/testing/: mod.rs  validation_framework.rs
src/timing/: mod.rs
src/utils/: mod.rs
src/web/: mod.rs  templates.rs
tests/: akamai_provider_test.rs  aws_provider_test.rs  core_traits_test.rs  integration_test.rs  ui_functional_tests.py
web/static/: app.js  demo.html  styles.css
